Version Next

    - Added support for dynamic determination of character encoding
    - Added Automatic-Module-Name manifest entry for JDK 9+
    - Removed obsolete McKesson HBOC bug workaround

Version 1.2.0 Released May 8, 2018

    - Miscellaneous bug fixes
    - Switch to Maven build
    - Update to Java 8

Version 1.1.0 Released December 10, 2015

    - Added support for escaping hex character data

Version 1.0.24 Released December 12, 2014

    - Added XMLStreamWriter support to XMLConverter

Version 1.0.18 Released September 19, 2014

    - Accept ACK's containing an MSH.9.2 sub-field

Version 1.0.10 Released May 3, 2012

    - Fix IllegalArgumentException when not using xalan-j
    - Add "content" property to HL7ContentException
    - Added LLPInputStream.skip()

Version 1.0.4 Released Dec 29, 2011

    - Initial release
