@@ -14,4 +14,9 @@
         <Method name="getValue"/>
         <Bug pattern="EI_EXPOSE_REP"/>
     </Match>
+    <Match>
+        <Class name="org.dellroad.hl7.XMLConverter"/>
+        <Field name="documentBuilderFactory"/>
+        <Bug pattern="EI_EXPOSE_REP2"/>
+    </Match>
 </FindBugsFilter>
