@@ -1,5 +1,6 @@
 Version Next
 
+    - Refactor XMLConverter to allow reuse of DocumentBuilderFactory
     - Added support for dynamic determination of character encoding
     - Added Automatic-Module-Name manifest entry for JDK 9+
     - Removed obsolete McKesson HBOC bug workaround
